modules/k8s/assets/envoy-gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: envoy-gateway
  namespace: envoy-gateway-system
spec:
  gatewayClassName: envoy
  infrastructure:
    parametersRef:
      group: gateway.envoyproxy.io
      kind: EnvoyProxy
      name: default
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      kinds:
        - kind: HTTPRoute
      namespaces:
        from: All
  - name: https
    port: 443
    protocol: HTTPS
    allowedRoutes:
      kinds:
        - kind: HTTPRoute
      namespaces:
        from: All
    tls:
      mode: Terminate
      certificateRefs:
@CERT_REFS@
  - name: tcp-ssh
    port: 22
    protocol: TCP
    allowedRoutes:
      kinds:
        - kind: TCPRoute
      namespaces:
        from: All
  - name: udp-dns
    port: 53
    protocol: UDP
    allowedRoutes:
      kinds:
        - kind: UDPRoute
      namespaces:
        from: All
